src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>OfficeSpecialty__c</fullName>
        <label>Office Specialty</label>
        <picklist>
            <picklistValues>
                <fullName>Endocrinology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Speciality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Podiatry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laboratory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dialysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OB GYN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nephrology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pedorthics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rheumatology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arthritis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weight Loss Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Clinic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pediatric Endocrinology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wound Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes Education Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acute Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pediatric Enocrinology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pulmonology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuerologist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OfficeType__c</fullName>
        <label>Office Type</label>
        <picklist>
            <picklistValues>
                <fullName>Private Practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University-based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital-based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Office_Hours_Json__c</fullName>
        <description>This field is only intended to be used in back-end process/logic to store office hours information as json string into a text field. This field should never be used by nor exposed to users.</description>
        <label>Office Hours Json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OpenActivitieslink__c</fullName>
        <label>Open Activities - link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpenCaptioning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Open Captioning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Osteoarthritis__c</fullName>
        <description>% of patients being treated for Osteoarthritis</description>
        <label>Osteoarthritis</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Osteoporosis__c</fullName>
        <description>% of patients being treated for Osteoporosis.</description>
        <label>Osteoporosis</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OtherPhone__c</fullName>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OveractiveBladder__c</fullName>
        <description>% of patients being treated for Overactive Bladder</description>
        <label>Overactive Bladder</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PExt__c</fullName>
        <label>P Ext.</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PatientAgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient Agency</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Agency</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Patient Agency)</relationshipLabel>
        <relationshipName>Accounts8_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PatientLifetimeValue__c</fullName>
        <label>Patient Lifetime Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PatientPortal__c</fullName>
        <label>Patient Portal</label>
        <picklist>
            <picklistValues>
                <fullName>(Criterions) MyEHR123.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AmazingCharts.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aprima.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>athenahealth.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benchmark Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CareLink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ChartMakerPatientPortal.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr-Connect.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eclinicalworks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMA.MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>emrconnect.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow My Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GlaceEMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HealthTracker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medconnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEDENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medfusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MedGenEhr.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOO-Secure.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mychart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MyEZAccess.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mygportal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My Practice Reputation by PracticeBuilders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MyUpDox.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEXTGEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NextTextWeb.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>onlinedermclinic.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PatientFusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PortalForPatients.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practice Partner (McKesson)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pay_Site_Amount__c</fullName>
        <inlineHelpText>enter only the amount of the pay site per month.</inlineHelpText>
        <label>Pay Site Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pediatric2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pediatric</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PediatricFormula__c</fullName>
        <label>Pediatric Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhoneType__c</fullName>
        <label>Phone Type</label>
        <picklist>
            <picklistValues>
                <fullName>Main line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_for_schedule__c</fullName>
        <label>Phone and email for scheduling</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PlannedDeinstall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Planned Deinstall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PlayerOS1004__c</fullName>
        <label>Player OS = 10.04</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Player_OS_12_04__c</fullName>
        <label>Player OS = 12.04</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Player_SSID__c</fullName>
        <label>Player - SSID</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Player_WiFi_Password__c</fullName>
        <label>Player - WiFi Password</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlayerwithACPIDCapability__c</fullName>
        <label>Player with ACPID Capability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portal_Activation_on_Tablet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has Member request Portal on Tablet?</description>
        <label>Portal Activation on Tablet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Practice_Management_Software__c</fullName>
        <description>The Practice Management Software used by the clinic.</description>
        <label>Practice Management Software</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pregnancy__c</fullName>
        <description>% of patients being seen for pregnancy</description>
        <label>Pregnancy</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PremierLevel1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Premier Partnership Level 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PremierLevel2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Premier Partnership Level 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrimaryDNS__c</fullName>
        <label>Primary DNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductDescription__c</fullName>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_Approved_by_MG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promotion Approved by MG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProstateCancer__c</fullName>
        <description>% of patients being treated for Prostate Cancer</description>
        <label>Prostate Cancer</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Psoriasis__c</fullName>
        <description>% of patients being treated for Psoriasis</description>
        <label>Psoriasis</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qualification_Type__c</fullName>
        <description>This field is maintained only from the contact triggers when a contact accountId changes.</description>
        <globalPicklist>Qualification_Type</globalPicklist>
        <label>Qualification Type</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qualified_Physicians__c</fullName>
        <label># Qualified Physicians</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RHN_Priority_Ranking__c</fullName>
        <label>RHN Priority Ranking</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReasonUninstalled__c</fullName>
        <label>Reason Uninstalled</label>
        <picklist>
            <controllingField>Stage__c</controllingField>
            <picklistValues>
                <fullName>Dr went MIA and clinic closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualifying Doctor Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualifying Doctor Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualifying Doctor Passed Away</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Issue - Boring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Issue - Not Relevent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Issue - Foreign Language</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Issue - Repetitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Reason Given</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Sponsors Allowed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relocation - Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relocation - New Regulations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relocation - Cable or Other System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relocation - Competitor System Installed There</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Went to Competitor - PP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Went to Competitor - AH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Went to Competitor - Other than PP or AH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Went to Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wait Time Very Long</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rennovations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does Not Qualify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Disaster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joined Medical Group/System/Hospital Please list new Network</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReasonUnqualified__c</fullName>
        <label>Reason Unqualified</label>
        <picklist>
            <picklistValues>
                <fullName>Audience specs unmet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctor retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-specialty waiting room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No advertising allowed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No network related prescriber onsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No TVs allowed in the waiting room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office closing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RecentContactDate__c</fullName>
        <formula>IF(TODAY() &lt; LastActivityDate, TODAY(), LastActivityDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recent Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reference_Given_Brand_Ambassador__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Member has agreed to be a reference, aka a brand ambassador</description>
        <label>Reference Given (Brand Ambassador)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_Given__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has Member given a referral?</description>
        <label>Referral Given</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RheumatoidArthritis__c</fullName>
        <description>% of patients being treated for RA</description>
        <label>Rheumatoid Arthritis</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <label>Root Cause</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rosacea__c</fullName>
        <description>% of patients being treated for Rosacea</description>
        <label>Rosacea</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Contact</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Secondary Contact)</relationshipLabel>
        <relationshipName>Accounts1_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SecondayDNS__c</fullName>
        <label>Seconday DNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sidebar__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does Member have a sidebar?</description>
        <inlineHelpText>Does Member have a sidebar?</inlineHelpText>
        <label>Sidebar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SignUpFormCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sign-Up Form Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SignUpLink__c</fullName>
        <formula>&quot;contextmedia.force.com/signup?refnum=&quot; + IdGenerator__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sign-Up Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteContactTitle__c</fullName>
        <label>Site Contact Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SixtyFiveAndOlder__c</fullName>
        <description>% of patients that are over the age of 65</description>
        <label>65+</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SkinCancer__c</fullName>
        <description>% of patients being treated for Skin Cancer</description>
        <label>Skin Cancer</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SleepDisorder__c</fullName>
        <description>% of patients being treated for Sleep Disorder.</description>
        <label>Sleep Disorder</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Slides__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does Member Have Slides</description>
        <inlineHelpText>Does Member Have Slides?</inlineHelpText>
        <label>Slides</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Small_ticker_fix_implemented__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Small ticker fix implemented</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specific_MAC_Required__c</fullName>
        <label>Specific MAC Required</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SponsorOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sponsor Opt-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SqFtofWR__c</fullName>
        <label>Sq. Ft. of WR</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Unconfirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unconfirmed_Outreach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed unscheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waitlist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending IT coordination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending competitor removal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending line drop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled - Competitor Removal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial install plays content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial install no content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial install DVD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Repair - no content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Repair - playing content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVD Site - Pending Repair/Awaiting Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uninstalled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold Delayed Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed Delayed Installation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Static__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Static</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stroke__c</fullName>
        <description>% of patients being treated for Stroke</description>
        <label>Stroke</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21-50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>76-100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>